<resources>
    <string name="app_name">HiEnglish</string>
    <string name="close_drawer">CloseDrawer</string>
    <string name="open_drawer">OpenDrawer</string>
    <string name="premium">Premium</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="rate">Rate the app</string>
    <string name="share">Share the app</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="not_decided_yet">not decided yet</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="programing">Programing</string>
    <string name="sport">Sport</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="travel">Travel</string>
    <string name="enter_the_word_to_search_for">Enter the word to search for</string>
    <string name="finish">FINISH</string>
    <string name="score">\"Score: \"</string>
    <string name="question_nb">Question:</string>
</resources>