<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/pay"
        android:icon="@drawable/ic_remove_ads"
        android:title="@string/remove_ads"
        app:showAsAction="never" />

            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"
                app:showAsAction="never" />
            <item
                android:id="@+id/rate_review"
                android:icon="@drawable/ic_rate_review"
                android:title="@string/rate"
                app:showAsAction="never" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"
                app:showAsAction="never" />
</menu>